--- a/Predicao_valor_seguro1.ipynb
+++ b/Predicao_valor_seguro1.ipynb
@@ -1951,8 +1951,6 @@
    "source": [
     "xgbr=XGBRegressor()\n",
     "xgbr.fit(x_train, y_train)\n",
-    "\n",
-    "\n",
     "evaluation(xgbr, x_test, y_test)"
    ]
   },
@@ -2059,16 +2057,6 @@
    ],
    "source": [
     "grid.fit(x_train, y_train)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "print(\"Result from Grid Search\")\n",
-    "print(\"\\n The best estimator across ALL searched params:\\n\",grid.best_estimator_)\n",
-    "print(\"\\n The best score across ALL searched params:\\n\",grid.best_score_)\n",
-    "print(\"\\n The best parameters across ALL searched params:\\n\",grid.best_params_)"
    ]
   },
   {
@@ -2228,7 +2216,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Comparando com os modelos que sofreram normalizacao dos dados"
+    "# Comparando com os modelos que tiveram normalizacao dos dados"
    ]
   },
   {
@@ -2639,6 +2627,13 @@
    ],
    "source": [
     "evaluation(gbrtuneD, X_test, Y_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Salvando modelo treinado para futuro deploy"
    ]
   },
   {
